fix: shocase card spacing

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ main .showcase .card{
 
 main .showcase .card:first-child{
     display: flex;
+    justify-content: space-between;
     flex-direction: column;
     gap: 1.5em;
 
